--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/microservices": "^11.1.5",
+    "@nestjs/microservices": "^11.1.6",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@supabase/supabase-js": "^2.53.0",
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
     "google-auth-library": "^10.2.1",
+    "kafkajs": "^2.2.4",
     "nodemailer": "^7.0.5",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
