--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       - '3001:3001' # TCP Microservice
     environment:
       - NODE_ENV=production
-      - FRONTEND_URL=http://localhost:3001
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost:5173}
       - KAFKA_BROKERS=kafka:9092
     depends_on:
       kafka:
@@ -105,6 +105,27 @@ services:
       retries: 3
       start_period: 40s
 
+  study-plan-service:
+    build:
+      context: .
+      dockerfile: python/study_plan_service/Dockerfile
+    ports:
+      - '8004:8000'
+    environment:
+      - KAFKA_BROKER_URL=kafka:9092
+      - DATABASE_URL=${DATABASE_URL}
+    depends_on:
+      kafka:
+        condition: service_healthy
+    networks:
+      - collab-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      
 networks:
   collab-network:
     driver: bridge
