feat: Implement document editor service with WebSocket support
- Added DocumentEditorController for handling document-related HTTP requests.
- Introduced DocumentEditorGateway for real-time collaboration using WebSockets.
- Configured WebSocket adapter in main application file.
- Enhanced DocumentEditorService with Y.js for collaborative document editing.
- Implemented message patterns for document operations (create, update, delete, etc.) in the service.
- Added awareness and collaboration features to track users in documents.
- Created a frontend example for integrating with the Y.js WebSocket backend.
- Updated Docker Compose configuration for environment variables.
- Added necessary dependencies for Y.js and WebSocket support.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,8 +49,8 @@ services:
       - '3001:3001' # TCP Microservice
     environment:
       - NODE_ENV=production
-      - FRONTEND_URL=http://localhost:3001
-      - KAFKA_BROKERS=kafka:9092
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost:5173}
+      - KAFKA_BROKERS=${KAFKA_BROKERS:-kafka:9092}
     depends_on:
       kafka:
         condition: service_healthy
