--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,16 @@
 /node_modules
 /build
 
+
+# dependencies
+/__pycache__
+*.pyc
+
+# Python service cache directories
+python/document-query-service/__pycache__/
+python/document-query-service/app/__pycache__/
+python/study_plan_service/__pycache__/
+
 # virtual environments
 .venv
 
@@ -39,11 +49,11 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+# .env
+# .env.development.local
+# .env.test.local
+# .env.production.local
+# .env.local
 
 # temp directory
 .temp
