--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:dev:api-gateway": "npm run build && node dist/apps/api-gateway/main.js",
-    "start:dev:api-gateway-watch": "concurrently \"nest build api-gateway --watch\" \"nodemon dist/apps/api-gateway/main.js\"",
+    "start:dev:api-gateway": "npm run build && node dist/api-gateway/src/main.js",
+    "start:dev:api-gateway-watch": "concurrently \"nest build api-gateway --watch\" \"nodemon dist/api-gateway/src/main.js\"",
     "build:api-gateway": "nest build api-gateway",
     "build:forum-service": "nest build forum-and-notification-service",
     "start:dev:forum-service": "nest start forum-and-notification-service --watch",
-    "start:forum-service": "node dist/apps/forum-and-notification-service/main",
+    "start:forum-service": "node dist/forum-and-notification-service/src/main",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/auth-service/main",
+    "start:prod": "node dist/auth-service/src/main",
     "start:api-gateway": "cd apps/api-gateway && npm run start:dev",
     "start:auth-service": "cd apps/auth-service && npm run start:dev",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -38,6 +38,7 @@
     "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/websockets": "^11.1.6",
     "@supabase/supabase-js": "^2.53.0",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
