--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "node scripts/start-dev.js",
     "build:forum-service": "nest build forum-and-notification-service",
     "start:dev:forum-service": "nest start forum-and-notification-service --watch",
     "start:forum-service": "node dist/forum-and-notification-service/src/main",
@@ -36,6 +36,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.1.6",
+    "@nestjs/platform-ws": "^11.1.6",
     "@nestjs/websockets": "^11.1.6",
     "@supabase/supabase-js": "^2.53.0",
     "@types/uuid": "^10.0.0",
@@ -50,6 +51,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^9.0.1",
     "y-protocols": "^1.0.6",
     "yjs": "^13.6.27"
