--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     environment:
       - NODE_ENV=production
       - FRONTEND_URL=${FRONTEND_URL:-http://localhost:5173}
-      - KAFKA_BROKERS=${KAFKA_BROKERS:-kafka:9092}
+      - KAFKA_BROKERS=${KAFKA_BROKERS_DOCKER:-kafka:9092}
     depends_on:
       kafka:
         condition: service_healthy
