for debug perpose

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 env/
 studyplanenv/
 
+# Firebase service account (SECURITY: Never commit these!)
+config/firebase/
+*.json
+service-account*.json
 
 # compiled output
 /dist
