--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^11.1.6",
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/ioredis": "^4.28.10",
+    "ioredis": "^5.8.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
