--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start": "nest start",
+    "start": "nest start api-gateway",
     "start:dev": "node scripts/start-dev.js",
     "build:forum-service": "nest build forum-and-notification-service",
     "start:dev:forum-service": "nest start forum-and-notification-service --watch",
+    "start:forum": "nest start forum-and-notification-service",
     "start:forum-service": "node dist/forum-and-notification-service/src/main",
     "start:dev:api-gateway": "npm run build && node dist/apps/api-gateway/main.js",
     "start:dev:api-gateway-watch": "concurrently \"nest build api-gateway --watch\" \"nodemon dist/apps/api-gateway/main.js\"",
     "build:api-gateway": "nest build api-gateway",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/auth-service/main",
-    "start:api-gateway": "cd apps/api-gateway && npm run start:dev",
-    "start:auth-service": "cd apps/auth-service && npm run start:dev",
+    "start:prod": "node dist/apps/api-gateway/src/main",
+    "start:api-gateway": "nest start api-gateway",
+    "start:auth-service": "nest start auth-service",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
