--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@supabase/supabase-js": "^2.74.0",
     "@types/multer": "^2.0.0",
     "archiver": "^7.0.1",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
