--- a/python/study_plan_service/Dockerfile
+++ b/python/study_plan_service/Dockerfile
@@ -1,18 +1,23 @@
-FROM python:3.10-slim
+FROM python:3.11-slim
 
 WORKDIR /app
 
 # Install system dependencies if needed (e.g., for psycopg2)
 RUN apt-get update && apt-get install -y build-essential libpq-dev && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+COPY python/study_plan_service/requirements.txt ./
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
-COPY src/ ./src/
-COPY .env .env
+# Copy the entire src directory to ensure all modules are included
+COPY python/study_plan_service/src/ ./src/
+
+# Set Python path to include src directory for imports
+ENV PYTHONPATH=/app/src
 
 EXPOSE 8000
 
 ENV PYTHONUNBUFFERED=1
 
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the main application
+CMD ["python", "-m", "src.main"]
