Fix document-query-service import paths
- Updated main.py to use absolute imports (app.kafka_service, app.controllers)
- Added PYTHONPATH=/app to Dockerfile to enable absolute imports
- Fixes ModuleNotFoundError: No module named 'kafka_service'

--- a/python/document-query-service/Dockerfile
+++ b/python/document-query-service/Dockerfile
@@ -23,8 +23,8 @@ RUN pip install --upgrade pip && \
 # Copy ONLY the service code (not the entire workspace)
 COPY python/document-query-service/app ./app
 
+# Set Python path to include app directory for imports
+ENV PYTHONPATH=/app
+
 # Command to start the service
-# Since you don't expose an API, you just need to run main.py
-# CMD ["python", "app/main.py"]
-# If you want to run with Uvicorn for better performance, uncomment the line below
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
