Fix: Add resource-service tsconfig.app.json and update .gitignore to allow necessary config files

--- a/apps/resource-service/Dockerfile
+++ b/apps/resource-service/Dockerfile
@@ -11,7 +11,7 @@ COPY package*.json ./
 COPY tsconfig*.json ./
 COPY nest-cli.json ./
 
-# Copy source code
+# Copy source code with tsconfig
 COPY apps/resource-service ./apps/resource-service/
 
 # Install all dependencies (including dev dependencies for building)
