--- a/python/document-query-service/Dockerfile
+++ b/python/document-query-service/Dockerfile
@@ -9,11 +9,17 @@ ENV PYTHONUNBUFFERED=1 \
 # Create app directory
 WORKDIR $APP_HOME
 
-# Install system dependencies (if you need Kafka SSL or build tools)
-RUN apt-get update && apt-get install -y \
+# Install system dependencies with retry logic and fallback mirrors
+RUN apt-get update --fix-missing || true && \
+    apt-get install -y --no-install-recommends \
     gcc \
     libpq-dev \
-    && rm -rf /var/lib/apt/lists/*
+    build-essential \
+    || (echo "Retrying with different mirror..." && \
+    sed -i 's/deb.debian.org/cloudfront.debian.net/g' /etc/apt/sources.list.d/debian.sources && \
+    apt-get update && \
+    apt-get install -y --no-install-recommends gcc libpq-dev build-essential) && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
 COPY python/document-query-service/requirements.txt .
@@ -25,6 +31,9 @@ COPY python/document-query-service/app ./app
 
 # Set Python path to include app directory for imports
 ENV PYTHONPATH=/app
+
+# Expose port
+EXPOSE 8000
 
 # Command to start the service
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
